@@ -1,4 +1,5 @@
-[B]1.0.1[/B]
+[B]1.1[/B]
     - Build the repo like other plugins
+    - plugins can be created from github repositories that do not have tags.
 [B]1.0[/B]
     - initial version
